--- a/part2/2.16 - 2.17 The Phonebook/src/index.css
+++ b/part2/2.16 - 2.17 The Phonebook/src/index.css
@@ -6,3 +6,12 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.errorMessage {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border: 5px solid;
+  padding: 10px;
+  margin-bottom: 10px;
+}
